# fixed-containers

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  WORKSPACE  build_helpers.bzl  fixed_containers_deps.bzl  vcpkg.json
.github/workflows/: codeql-analysis.yml  macos.yml  ubuntu-clang.yml  ubuntu.yml  windows.yml
aarch64/: clang_to_aarch64-linux-gnu.toolchain.cmake  cross-compile.sh
fixed_containers/: concepts.hpp  enum_set.hpp  enum_utils.hpp  fixed_vector.hpp  optional_storage.hpp  pair_view.hpp  random_access_iterator_transformer.hpp  string_literal.hpp  type_name.hpp
include/fixed_containers/: algorithm.hpp  align_up.hpp  arrow_proxy.hpp  assert_or_abort.hpp  assignable_storage.hpp  bidirectional_iterator.hpp  circular_indexing.hpp  circular_integer_range_iterator.hpp  comparison_chain.hpp  compiler_compat.hpp  concepts.hpp  consteval_compare.hpp  constexpr_support.hpp  emplace.hpp  enum_array.hpp  enum_map.hpp  enum_map_raw_view.hpp  enum_set.hpp  enum_set_raw_view.hpp  enum_utils.hpp  erase_if.hpp  filtered_integer_range_iterator.hpp  fixed_bitset.hpp  fixed_bitset_raw_view.hpp  fixed_circular_buffer.hpp  fixed_circular_deque.hpp  fixed_circular_queue.hpp  fixed_deque.hpp  fixed_deque_raw_view.hpp  fixed_doubly_linked_list.hpp  fixed_doubly_linked_list_raw_view.hpp  fixed_graph.hpp  fixed_index_based_storage.hpp  fixed_linked_list.hpp  fixed_list.hpp  fixed_map.hpp  fixed_map_adapter.hpp  fixed_map_raw_view.hpp  fixed_queue.hpp  fixed_red_black_tree.hpp  (+62 more)
patches/: benchmark_as_system_include.patch  gtest_use_maybe_unused_instead_of_attribute_unused.patch  gtest_wcovered_switch_default.patch  range-v3_bzlmod.patch
test/: assignable_storage_test.cpp  circular_indexing_test.cpp  circular_integer_range_iterator_test.cpp  clang18crash.cpp  comparison_chain_test.cpp  concepts_test.cpp  enum_array_test.cpp  enum_map_raw_view_test.cpp  enum_map_test.cpp  enum_set_raw_view_test.cpp  enum_set_test.cpp  enum_utils_test.cpp  enums_test_common.hpp  filtered_integer_range_iterator_test.cpp  fixed_bitset_test.cpp  fixed_circular_buffer_test.cpp  fixed_circular_deque_test.cpp  fixed_circular_queue_test.cpp  fixed_deque_raw_view_test.cpp  fixed_deque_test.cpp  fixed_doubly_linked_list_raw_view_test.cpp  fixed_doubly_linked_list_test.cpp  fixed_graph_test.cpp  fixed_linked_list_test.cpp  fixed_list_test.cpp  fixed_map_perf_test.cpp  fixed_map_raw_view_test.cpp  fixed_map_test.cpp  fixed_queue_test.cpp  fixed_red_black_tree_test.cpp  fixed_red_black_tree_view_test.cpp  fixed_robinhood_hashtable_test.cpp  fixed_set_test.cpp  fixed_stack_test.cpp  fixed_string_test.cpp  fixed_unordered_map_raw_view_test.cpp  fixed_unordered_map_test.cpp  fixed_unordered_set_raw_view_test.cpp  fixed_unordered_set_test.cpp  fixed_vector_test.cpp  (+31 more)
test/benchmarks/: map_clear.cpp  map_copy.cpp  map_lookup.cpp  map_utils.hpp
